# sdtm-mapping-ai

./: .env.example  .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/scripts/: build_sdtm_knowledge_base.py  download_cdisc_pilot.py
docs/: architecture.md
src/sdtm_mapping_ai/: __init__.py  config.py
src/sdtm_mapping_ai/evaluation/: metrics.py  run_eval.py
src/sdtm_mapping_ai/models/: __init__.py  domain_predictor.py  llm_client.py  variable_mapper.py
src/sdtm_mapping_ai/pipeline/: __init__.py  confidence.py  mapper.py  profiler.py  run.py
src/sdtm_mapping_ai/rag/: __init__.py  build_index.py  embeddings.py  retriever.py
src/sdtm_mapping_ai/sdtm/: __init__.py  conformance.py  controlled_terminology.py  standards.py
src/sdtm_mapping_ai/utils/: io.py  logging.py
tests/: __init__.py  conftest.py  test_conformance.py  test_domain_predictor.py  test_llm_client.py  test_metrics.py  test_pipeline.py  test_retriever.py  test_variable_mapper.py
