[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdtm-mapping-ai"
version = "0.2.0"
description = "AI-Powered SDTM Domain Prediction and Variable Mapping Using LLMs and RAG"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "DanielMartin Arogyasami"}]
keywords = ["SDTM", "CDISC", "clinical-trials", "LLM", "RAG", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]
xpt = ["xport>=3.7.0"]

[project.scripts]
sdtm-map = "sdtm_mapping_ai.pipeline.run:app"
sdtm-eval = "sdtm_mapping_ai.evaluation.run_eval:app"
sdtm-index = "sdtm_mapping_ai.rag.build_index:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
# B008: Typer CLI uses Option() in parameter defaults by design.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (requires API calls)",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
